# third_party_e2fsprogs

./: .gitignore  0001-e2fsprogs-set-hugefile-from-4T-to-1T-in-hugefile-tes.patch  0002-libss-add-newer-libreadline.so.8-to-dlopen-path.patch  0003-tests-update-expect-files-for-f_mmp_garbage.patch  0004-tests-update-expect-files-for-f_large_dir-and-f_larg.patch  0005-resize2fs-resize2fs-disk-hardlinks-will-be-error.patch  0006-e2fsck-exit-journal-recovery-when-find-EIO-ENOMEM-er.patch  0007-e2fsck-exit-journal-recovery-when-jounral-superblock.patch  0008-e2fsck-add-env-param-E2FS_UNRELIABLE_IO-to-fi.patch  0009-e2mmpstatus.8.in-detele-filesystem-can-be-UUID-or-LA.patch  0010-tests-update-expect-file-for-u_direct_io.patch  0011-libext2fs-don-t-old-the-CACHE_MTX-while-doing-I-O.patch  0012-tests-fix-ACL-printing-tests.patch  0012-tests-skip-m_rootdir_acl-if-selinux-is-not-disabled.patch  0013-e2fsck-do-not-clean-up-file-acl-if-the-inode-is-trun.patch  0014-e2fsck-handle-level-is-overflow-in-ext2fs_extent_get.patch  0015-libext2fs-add-sanity-check-to-extent-manipulation.patch  0016-e2fsprogs-add-sw64.patch  0017-tune2fs-do-not-change-j_tail_sequence-in-journal-sup.patch  0018-debugfs-teach-logdump-the-n-num_trans-option.patch  0019-tune2fs-fix-tune2fs-segfault-when-ext2fs_run_ext3_jo.patch  0020-tune2fs-tune2fs_main-should-return-rc-when-some-erro.patch  0021-tune2fs-exit-directly-when-fs-freed-in-ext2fs_run_ext3_journal.patch  0022-unix_io.c-fix-deadlock-problem-in-unix_write_blk64.patch  0023-debugfs-fix-repeated-output-problem-with-logdump-O-n.patch  0024-tune2fs-check-return-value-of-ext2fs_mmp_update2-in-.patch  0025-mmp-fix-wrong-comparison-in-ext2fs_mmp_stop.patch  0026-misc-fsck.c-Processes-may-kill-other-processes.patch  0027-dumpe2fs-resize2fs-avoid-memory-leak-on-error-path.patch  0028-libext2fs-fix-memory-leak-in-error-path-while-openin.patch  0029-e2fsck-avoid-theoretical-null-dereference-in-end_pro.patch  0030-e2fsck-fix-potential-out-of-bounds-read-in-inc_ea_in.patch  0031-e2fsck-avoid-out-of-bounds-write-for-very-deep-exten.patch  0032-e2fsck-fix-potential-fencepost-error-in-e2fsck_shoul.patch  0033-libext2fs-fix-potential-integer-overflow-in-bitmap-a.patch  0034-tune2fs-fix-an-error-message.patch  0035-e2fsck-don-t-allow-journal-inode-to-have-encrypt-fla.patch  0036-lib-ext2fs-fix-unbalanced-mutex-unlock-for-BOUNCE_MT.patch  0037-libext2fs-fix-ext2fs_compare_generic_bmap-logic.patch  0038-Quiet-unused-variable-warnings.patch  (+18 more)
contrib/: populate-extfs.sh
contrib/android/: BUILD.gn  block_range.c  dac_config.cpp  dac_config.h  e2fsdroid.c  perms.c  perms.h
e2fsck/: BUILD.gn
lib/: BUILD.gn  config.h  dirpaths.h
lib/blkid/: BUILD.gn
lib/e2p/: BUILD.gn
lib/et/: BUILD.gn
lib/ext2fs/: BUILD.gn  ext2_err.c  extent.c
lib/ss/: BUILD.gn
lib/support/: BUILD.gn
lib/uuid/: BUILD.gn
misc/: BUILD.gn  blkid.c
resize/: BUILD.gn
