# Copyright (c) 2021 Huawei Device Co., Ltd.
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.

import("//build/ohos.gni")
config("e2fsprogs-defaults") {
  cflags = [
    "-Wno-pointer-sign",
    "-Wno-unused-variable",
    "-Wno-error=format",
  ]
}

###################################################
###Build e2fsck
ohos_executable("e2fsck") {
  configs = [ ":e2fsprogs-defaults" ]
  sources = [
    "badblocks.c",
    "dirinfo.c",
    "dx_dirinfo.c",
    "e2fsck.c",
    "ea_refcount.c",
    "ehandler.c",
    "encrypted_files.c",
    "extents.c",
    "journal.c",
    "logfile.c",
    "message.c",
    "pass1.c",
    "pass1b.c",
    "pass2.c",
    "pass3.c",
    "pass4.c",
    "pass5.c",
    "problem.c",
    "quota.c",
    "readahead.c",
    "recovery.c",
    "region.c",
    "rehash.c",
    "revoke.c",
    "sigcatcher.c",
    "super.c",
    "unix.c",
    "util.c",
  ]

  include_dirs = [
    ".",
    "//third_party/e2fsprogs/lib",
    "//third_party/e2fsprogs/lib/ext2fs",
    "//third_party/mtd-utils/lib",
  ]

  deps = [
    "//third_party/e2fsprogs/lib/blkid:libext2_blkid",
    "//third_party/e2fsprogs/lib/e2p:libext2_e2p",
    "//third_party/e2fsprogs/lib/et:libext2_com_err",
    "//third_party/e2fsprogs/lib/ext2fs:libext2fs",
    "//third_party/e2fsprogs/lib/support:libext2_quota",
    "//third_party/e2fsprogs/lib/uuid:libext2_uuid",
  ]

  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "e2fsprogs"
  install_images = [
    "system",
    "updater",
  ]
}
