# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("e2fsprogs-defaults") {
  cflags = [ "-Wno-pointer-sign" ]
}

##Build resize2fs
ohos_executable("resize2fs") {
  configs = [ ":e2fsprogs-defaults" ]
  sources = [
    "extent.c",
    "main.c",
    "online.c",
    "resize2fs.c",
    "resource_track.c",
    "sim_progress.c",
  ]

  include_dirs = [
    ".",
    "//third_party/e2fsprogs/e2fsck",
    "//third_party/e2fsprogs/lib",
    "//third_party/e2fsprogs/lib/ext2fs",
  ]
  cflags = [
    "-Wno-error=format",
    "-Wno-error=type-limits",
    "-Wno-format-extra-args",
  ]

  deps = [
    "//third_party/e2fsprogs/lib/e2p:libext2_e2p",
    "//third_party/e2fsprogs/lib/et:libext2_com_err",
    "//third_party/e2fsprogs/lib/ext2fs:libext2fs",
  ]

  ldflags = [ "-stdlib=libc++_static" ]
  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "e2fsprogs"
  install_images = [
    "system",
    "updater",
  ]
}
