# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("e2fsprogs-defaults") {
  cflags = [
    "-Wno-implicit-function-declaration",
    "-Wno-int-conversion",
  ]
  defines = [ "secure_getenv=getenv" ]
}
config("libext2-headers") {
  include_dirs = [ "//third_party/e2fsprogs/lib" ]
}

ohos_shared_library("libext2_blkid") {
  configs = [
    ":e2fsprogs-defaults",
    ":libext2-headers",
  ]
  sources = [
    "cache.c",
    "dev.c",
    "devname.c",
    "devno.c",
    "getsize.c",
    "llseek.c",
    "probe.c",
    "read.c",
    "resolve.c",
    "save.c",
    "tag.c",
    "version.c",
  ]

  include_dirs = [ "." ]
  deps = [ "//third_party/e2fsprogs/lib/uuid:libext2_uuid" ]
  cflags = [
    "-Wno-error=attributes",
    "-Wno-error=pointer-sign",
    "-Wno-unused-parameter",
    "-fno-strict-aliasing",
  ]
  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "e2fsprogs"
  install_images = [
    "system",
    "updater",
  ]
}
