# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("e2fsprogs-defaults") {
  cflags = [
    "-Wall",
    "-Werror",
  ]
}
config("libext2-headers") {
  include_dirs = [ "//third_party/e2fsprogs/lib" ]
}
ohos_shared_library("libext2_e2p") {
  sources = [
    "encoding.c",
    "errcode.c",
    "feature.c",
    "fgetflags.c",
    "fgetproject.c",
    "fgetversion.c",
    "fsetflags.c",
    "fsetproject.c",
    "fsetversion.c",
    "getflags.c",
    "getversion.c",
    "hashstr.c",
    "iod.c",
    "ljs.c",
    "ls.c",
    "mntopts.c",
    "ostype.c",
    "parse_num.c",
    "pe.c",
    "percent.c",
    "pf.c",
    "ps.c",
    "setflags.c",
    "setversion.c",
    "uuid.c",
  ]
  include_dirs = [ "." ]

  configs = [
    ":e2fsprogs-defaults",
    ":libext2-headers",
  ]
  cflags = [
    "-Wno-error=attributes",
    "-Wno-unused-parameter",
  ]
  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "e2fsprogs"
  install_images = [
    "system",
    "updater",
  ]
}
