# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("libext2-headers") {
  include_dirs = [ "//third_party/e2fsprogs/lib" ]
  defines = [ "secure_getenv=getenv" ]
}

ohos_static_library("libext2_ss") {
  sources = [
    "data.c",
    "error.c",
    "execute_cmd.c",
    "get_readline.c",
    "help.c",
    "invocation.c",
    "list_rqs.c",
    "listen.c",
    "pager.c",
    "parse.c",
    "prompt.c",
    "request_tbl.c",
    "requests.c",
    "ss_err.c",
    "std_rqs.c",
  ]

  include_dirs = [ "." ]
  configs = [ ":libext2-headers" ]

  deps = [ "//third_party/e2fsprogs/lib/et:libext2_com_err" ]
}
